--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,19 @@
-html,
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,700&display=swap');
+
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  background-color: #001E3C; 
 }
 
 * {
-  box-sizing: border-box;
+  font-family: 'Nunito', sans-serif !important;
+}
+
+a.read-more-less
+{
+  color: white;
+  display: block;
+  text-decoration: none;
+  margin: 6px 0;
 }
